--- a/trunk/autom4te.cache/traces.1
+++ b/trunk/autom4te.cache/traces.1
@@ -946,7 +946,8 @@ m4trace:configure.ac:112: -1- _AM_SUBST_NOTMAKE([BUILD_GTK3_TRUE])
 m4trace:configure.ac:112: -1- _AM_SUBST_NOTMAKE([BUILD_GTK3_FALSE])
 m4trace:configure.ac:116: -1- AC_CONFIG_FILES([
 Makefile
-src/libgmtk-0.1.pc
+src/libgmtk.pc
+src/libgmlib.pc
 src/Makefile
 po/Makefile.in])
 m4trace:configure.ac:116: -1- _m4_warn([obsolete], [AC_OUTPUT should be used without arguments.
