Have configure autodetect gtk3

--- a/autom4te.cache/traces.1
+++ b/autom4te.cache/traces.1
@@ -734,248 +734,346 @@ m4trace:configure.ac:29: -1- m4_pattern_allow([^PKG_CONFIG_LIBDIR$])
 m4trace:configure.ac:29: -1- AC_SUBST([PKG_CONFIG])
 m4trace:configure.ac:29: -1- AC_SUBST_TRACE([PKG_CONFIG])
 m4trace:configure.ac:29: -1- m4_pattern_allow([^PKG_CONFIG$])
-m4trace:configure.ac:29: -1- AC_SUBST([GTK_CFLAGS])
-m4trace:configure.ac:29: -1- AC_SUBST_TRACE([GTK_CFLAGS])
-m4trace:configure.ac:29: -1- m4_pattern_allow([^GTK_CFLAGS$])
-m4trace:configure.ac:29: -1- AC_SUBST([GTK_LIBS])
-m4trace:configure.ac:29: -1- AC_SUBST_TRACE([GTK_LIBS])
-m4trace:configure.ac:29: -1- m4_pattern_allow([^GTK_LIBS$])
-m4trace:configure.ac:30: -1- AC_SUBST([GTK_CFLAGS])
-m4trace:configure.ac:30: -1- AC_SUBST_TRACE([GTK_CFLAGS])
-m4trace:configure.ac:30: -1- m4_pattern_allow([^GTK_CFLAGS$])
-m4trace:configure.ac:31: -1- AC_SUBST([GTK_LIBS])
-m4trace:configure.ac:31: -1- AC_SUBST_TRACE([GTK_LIBS])
-m4trace:configure.ac:31: -1- m4_pattern_allow([^GTK_LIBS$])
-m4trace:configure.ac:33: -1- AC_SUBST([GLIB_CFLAGS])
-m4trace:configure.ac:33: -1- AC_SUBST_TRACE([GLIB_CFLAGS])
-m4trace:configure.ac:33: -1- m4_pattern_allow([^GLIB_CFLAGS$])
-m4trace:configure.ac:33: -1- AC_SUBST([GLIB_LIBS])
-m4trace:configure.ac:33: -1- AC_SUBST_TRACE([GLIB_LIBS])
-m4trace:configure.ac:33: -1- m4_pattern_allow([^GLIB_LIBS$])
-m4trace:configure.ac:34: -1- AC_SUBST([GLIB_CFLAGS])
-m4trace:configure.ac:34: -1- AC_SUBST_TRACE([GLIB_CFLAGS])
-m4trace:configure.ac:34: -1- m4_pattern_allow([^GLIB_CFLAGS$])
-m4trace:configure.ac:35: -1- AC_SUBST([GLIB_LIBS])
-m4trace:configure.ac:35: -1- AC_SUBST_TRACE([GLIB_LIBS])
-m4trace:configure.ac:35: -1- m4_pattern_allow([^GLIB_LIBS$])
-m4trace:configure.ac:37: -1- AC_SUBST([GTK2_12_CFLAGS])
-m4trace:configure.ac:37: -1- AC_SUBST_TRACE([GTK2_12_CFLAGS])
-m4trace:configure.ac:37: -1- m4_pattern_allow([^GTK2_12_CFLAGS$])
-m4trace:configure.ac:37: -1- AC_SUBST([GTK2_12_LIBS])
-m4trace:configure.ac:37: -1- AC_SUBST_TRACE([GTK2_12_LIBS])
-m4trace:configure.ac:37: -1- m4_pattern_allow([^GTK2_12_LIBS$])
-m4trace:configure.ac:37: -1- AC_DEFINE_TRACE_LITERAL([GTK2_12_ENABLED])
-m4trace:configure.ac:37: -1- m4_pattern_allow([^GTK2_12_ENABLED$])
-m4trace:configure.ac:37: -1- AH_OUTPUT([GTK2_12_ENABLED], [/* Define to 1 if you have GTK 2.12 or higher */
+m4trace:configure.ac:29: -1- AC_SUBST([X11_CFLAGS])
+m4trace:configure.ac:29: -1- AC_SUBST_TRACE([X11_CFLAGS])
+m4trace:configure.ac:29: -1- m4_pattern_allow([^X11_CFLAGS$])
+m4trace:configure.ac:29: -1- AC_SUBST([X11_LIBS])
+m4trace:configure.ac:29: -1- AC_SUBST_TRACE([X11_LIBS])
+m4trace:configure.ac:29: -1- m4_pattern_allow([^X11_LIBS$])
+m4trace:configure.ac:29: -1- AC_DEFINE_TRACE_LITERAL([X11_ENABLED])
+m4trace:configure.ac:29: -1- m4_pattern_allow([^X11_ENABLED$])
+m4trace:configure.ac:29: -1- AH_OUTPUT([X11_ENABLED], [/* Define to 1 if X11 support is needed */
+@%:@undef X11_ENABLED])
+m4trace:configure.ac:30: -1- AC_SUBST([X11_LIBS])
+m4trace:configure.ac:30: -1- AC_SUBST_TRACE([X11_LIBS])
+m4trace:configure.ac:30: -1- m4_pattern_allow([^X11_LIBS$])
+m4trace:configure.ac:34: -2- _m4_warn([obsolete], [The macro `AC_HELP_STRING' is obsolete.
+You should run autoupdate.], [../../lib/autoconf/general.m4:209: AC_HELP_STRING is expanded from...
+configure.ac:34: the top level])
+m4trace:configure.ac:42: -1- AC_SUBST([GTK_CFLAGS])
+m4trace:configure.ac:42: -1- AC_SUBST_TRACE([GTK_CFLAGS])
+m4trace:configure.ac:42: -1- m4_pattern_allow([^GTK_CFLAGS$])
+m4trace:configure.ac:42: -1- AC_SUBST([GTK_LIBS])
+m4trace:configure.ac:42: -1- AC_SUBST_TRACE([GTK_LIBS])
+m4trace:configure.ac:42: -1- m4_pattern_allow([^GTK_LIBS$])
+m4trace:configure.ac:47: -1- AC_DEFINE_TRACE_LITERAL([GTK3_ENABLED])
+m4trace:configure.ac:47: -1- m4_pattern_allow([^GTK3_ENABLED$])
+m4trace:configure.ac:47: -1- AH_OUTPUT([GTK3_ENABLED], [/* Define to 1 if you have GTK 3 or higher */
+@%:@undef GTK3_ENABLED])
+m4trace:configure.ac:47: -1- AC_DEFINE_TRACE_LITERAL([GTK2_12_ENABLED])
+m4trace:configure.ac:47: -1- m4_pattern_allow([^GTK2_12_ENABLED$])
+m4trace:configure.ac:47: -1- AH_OUTPUT([GTK2_12_ENABLED], [/* Define to 1 if you have GTK 2.12 or higher */
 @%:@undef GTK2_12_ENABLED])
-m4trace:configure.ac:38: -1- AC_SUBST([GTK2_12_DEFINES])
-m4trace:configure.ac:38: -1- AC_SUBST_TRACE([GTK2_12_DEFINES])
-m4trace:configure.ac:38: -1- m4_pattern_allow([^GTK2_12_DEFINES$])
-m4trace:configure.ac:40: -1- AC_SUBST([GTK2_14_CFLAGS])
-m4trace:configure.ac:40: -1- AC_SUBST_TRACE([GTK2_14_CFLAGS])
-m4trace:configure.ac:40: -1- m4_pattern_allow([^GTK2_14_CFLAGS$])
-m4trace:configure.ac:40: -1- AC_SUBST([GTK2_14_LIBS])
-m4trace:configure.ac:40: -1- AC_SUBST_TRACE([GTK2_14_LIBS])
-m4trace:configure.ac:40: -1- m4_pattern_allow([^GTK2_14_LIBS$])
-m4trace:configure.ac:40: -1- AC_DEFINE_TRACE_LITERAL([GTK2_14_ENABLED])
-m4trace:configure.ac:40: -1- m4_pattern_allow([^GTK2_14_ENABLED$])
-m4trace:configure.ac:40: -1- AH_OUTPUT([GTK2_14_ENABLED], [/* Define to 1 if you have GTK 2.14 or higher */
+m4trace:configure.ac:47: -1- AC_SUBST([GTK2_12_DEFINES])
+m4trace:configure.ac:47: -1- AC_SUBST_TRACE([GTK2_12_DEFINES])
+m4trace:configure.ac:47: -1- m4_pattern_allow([^GTK2_12_DEFINES$])
+m4trace:configure.ac:47: -1- AC_DEFINE_TRACE_LITERAL([GTK2_14_ENABLED])
+m4trace:configure.ac:47: -1- m4_pattern_allow([^GTK2_14_ENABLED$])
+m4trace:configure.ac:47: -1- AH_OUTPUT([GTK2_14_ENABLED], [/* Define to 1 if you have GTK 2.14 or higher */
 @%:@undef GTK2_14_ENABLED])
-m4trace:configure.ac:41: -1- AC_SUBST([GTK2_14_DEFINES])
-m4trace:configure.ac:41: -1- AC_SUBST_TRACE([GTK2_14_DEFINES])
-m4trace:configure.ac:41: -1- m4_pattern_allow([^GTK2_14_DEFINES$])
-m4trace:configure.ac:43: -1- AC_SUBST([GTK2_18_CFLAGS])
-m4trace:configure.ac:43: -1- AC_SUBST_TRACE([GTK2_18_CFLAGS])
-m4trace:configure.ac:43: -1- m4_pattern_allow([^GTK2_18_CFLAGS$])
-m4trace:configure.ac:43: -1- AC_SUBST([GTK2_18_LIBS])
-m4trace:configure.ac:43: -1- AC_SUBST_TRACE([GTK2_18_LIBS])
-m4trace:configure.ac:43: -1- m4_pattern_allow([^GTK2_18_LIBS$])
-m4trace:configure.ac:43: -1- AC_DEFINE_TRACE_LITERAL([GTK2_18_ENABLED])
-m4trace:configure.ac:43: -1- m4_pattern_allow([^GTK2_18_ENABLED$])
-m4trace:configure.ac:43: -1- AH_OUTPUT([GTK2_18_ENABLED], [/* Define to 1 if you have GTK 2.18 or higher */
+m4trace:configure.ac:47: -1- AC_SUBST([GTK2_14_DEFINES])
+m4trace:configure.ac:47: -1- AC_SUBST_TRACE([GTK2_14_DEFINES])
+m4trace:configure.ac:47: -1- m4_pattern_allow([^GTK2_14_DEFINES$])
+m4trace:configure.ac:47: -1- AC_DEFINE_TRACE_LITERAL([GTK2_18_ENABLED])
+m4trace:configure.ac:47: -1- m4_pattern_allow([^GTK2_18_ENABLED$])
+m4trace:configure.ac:47: -1- AH_OUTPUT([GTK2_18_ENABLED], [/* Define to 1 if you have GTK 2.18 or higher */
 @%:@undef GTK2_18_ENABLED])
-m4trace:configure.ac:44: -1- AC_SUBST([GTK2_18_DEFINES])
-m4trace:configure.ac:44: -1- AC_SUBST_TRACE([GTK2_18_DEFINES])
-m4trace:configure.ac:44: -1- m4_pattern_allow([^GTK2_18_DEFINES$])
-m4trace:configure.ac:46: -1- AC_SUBST([GTK2_20_CFLAGS])
-m4trace:configure.ac:46: -1- AC_SUBST_TRACE([GTK2_20_CFLAGS])
-m4trace:configure.ac:46: -1- m4_pattern_allow([^GTK2_20_CFLAGS$])
-m4trace:configure.ac:46: -1- AC_SUBST([GTK2_20_LIBS])
-m4trace:configure.ac:46: -1- AC_SUBST_TRACE([GTK2_20_LIBS])
-m4trace:configure.ac:46: -1- m4_pattern_allow([^GTK2_20_LIBS$])
-m4trace:configure.ac:46: -1- AC_DEFINE_TRACE_LITERAL([GTK2_20_ENABLED])
-m4trace:configure.ac:46: -1- m4_pattern_allow([^GTK2_20_ENABLED$])
-m4trace:configure.ac:46: -1- AH_OUTPUT([GTK2_20_ENABLED], [/* Define to 1 if you have GTK 2.20 or higher */
+m4trace:configure.ac:47: -1- AC_SUBST([GTK2_18_DEFINES])
+m4trace:configure.ac:47: -1- AC_SUBST_TRACE([GTK2_18_DEFINES])
+m4trace:configure.ac:47: -1- m4_pattern_allow([^GTK2_18_DEFINES$])
+m4trace:configure.ac:47: -1- AC_DEFINE_TRACE_LITERAL([GTK2_20_ENABLED])
+m4trace:configure.ac:47: -1- m4_pattern_allow([^GTK2_20_ENABLED$])
+m4trace:configure.ac:47: -1- AH_OUTPUT([GTK2_20_ENABLED], [/* Define to 1 if you have GTK 2.20 or higher */
 @%:@undef GTK2_20_ENABLED])
 m4trace:configure.ac:47: -1- AC_SUBST([GTK2_20_DEFINES])
 m4trace:configure.ac:47: -1- AC_SUBST_TRACE([GTK2_20_DEFINES])
 m4trace:configure.ac:47: -1- m4_pattern_allow([^GTK2_20_DEFINES$])
-m4trace:configure.ac:49: -1- AC_SUBST([GTK2_22_CFLAGS])
-m4trace:configure.ac:49: -1- AC_SUBST_TRACE([GTK2_22_CFLAGS])
-m4trace:configure.ac:49: -1- m4_pattern_allow([^GTK2_22_CFLAGS$])
-m4trace:configure.ac:49: -1- AC_SUBST([GTK2_22_LIBS])
-m4trace:configure.ac:49: -1- AC_SUBST_TRACE([GTK2_22_LIBS])
-m4trace:configure.ac:49: -1- m4_pattern_allow([^GTK2_22_LIBS$])
-m4trace:configure.ac:49: -1- AC_DEFINE_TRACE_LITERAL([GTK2_22_ENABLED])
-m4trace:configure.ac:49: -1- m4_pattern_allow([^GTK2_22_ENABLED$])
-m4trace:configure.ac:49: -1- AH_OUTPUT([GTK2_22_ENABLED], [/* Define to 1 if you have GTK 2.22 or higher */
+m4trace:configure.ac:47: -1- AC_DEFINE_TRACE_LITERAL([GTK2_22_ENABLED])
+m4trace:configure.ac:47: -1- m4_pattern_allow([^GTK2_22_ENABLED$])
+m4trace:configure.ac:47: -1- AH_OUTPUT([GTK2_22_ENABLED], [/* Define to 1 if you have GTK 2.22 or higher */
 @%:@undef GTK2_22_ENABLED])
-m4trace:configure.ac:50: -1- AC_SUBST([GTK2_22_DEFINES])
-m4trace:configure.ac:50: -1- AC_SUBST_TRACE([GTK2_22_DEFINES])
-m4trace:configure.ac:50: -1- m4_pattern_allow([^GTK2_22_DEFINES$])
-m4trace:configure.ac:52: -1- AC_SUBST([GTK2_24_CFLAGS])
-m4trace:configure.ac:52: -1- AC_SUBST_TRACE([GTK2_24_CFLAGS])
-m4trace:configure.ac:52: -1- m4_pattern_allow([^GTK2_24_CFLAGS$])
-m4trace:configure.ac:52: -1- AC_SUBST([GTK2_24_LIBS])
-m4trace:configure.ac:52: -1- AC_SUBST_TRACE([GTK2_24_LIBS])
-m4trace:configure.ac:52: -1- m4_pattern_allow([^GTK2_24_LIBS$])
-m4trace:configure.ac:52: -1- AC_DEFINE_TRACE_LITERAL([GTK2_24_ENABLED])
-m4trace:configure.ac:52: -1- m4_pattern_allow([^GTK2_24_ENABLED$])
-m4trace:configure.ac:52: -1- AH_OUTPUT([GTK2_24_ENABLED], [/* Define to 1 if you have GTK 2.24 or higher */
+m4trace:configure.ac:47: -1- AC_SUBST([GTK2_22_DEFINES])
+m4trace:configure.ac:47: -1- AC_SUBST_TRACE([GTK2_22_DEFINES])
+m4trace:configure.ac:47: -1- m4_pattern_allow([^GTK2_22_DEFINES$])
+m4trace:configure.ac:47: -1- AC_DEFINE_TRACE_LITERAL([GTK2_24_ENABLED])
+m4trace:configure.ac:47: -1- m4_pattern_allow([^GTK2_24_ENABLED$])
+m4trace:configure.ac:47: -1- AH_OUTPUT([GTK2_24_ENABLED], [/* Define to 1 if you have GTK 2.24 or higher */
 @%:@undef GTK2_24_ENABLED])
-m4trace:configure.ac:53: -1- AC_SUBST([GTK2_24_DEFINES])
-m4trace:configure.ac:53: -1- AC_SUBST_TRACE([GTK2_24_DEFINES])
-m4trace:configure.ac:53: -1- m4_pattern_allow([^GTK2_24_DEFINES$])
-m4trace:configure.ac:55: -1- AC_SUBST([GLIB2_14_CFLAGS])
-m4trace:configure.ac:55: -1- AC_SUBST_TRACE([GLIB2_14_CFLAGS])
-m4trace:configure.ac:55: -1- m4_pattern_allow([^GLIB2_14_CFLAGS$])
-m4trace:configure.ac:55: -1- AC_SUBST([GLIB2_14_LIBS])
-m4trace:configure.ac:55: -1- AC_SUBST_TRACE([GLIB2_14_LIBS])
-m4trace:configure.ac:55: -1- m4_pattern_allow([^GLIB2_14_LIBS$])
-m4trace:configure.ac:55: -1- AC_DEFINE_TRACE_LITERAL([GLIB2_14_ENABLED])
-m4trace:configure.ac:55: -1- m4_pattern_allow([^GLIB2_14_ENABLED$])
-m4trace:configure.ac:55: -1- AH_OUTPUT([GLIB2_14_ENABLED], [/* Define to 1 if you have GLIB 2.14 or higher */
-@%:@undef GLIB2_14_ENABLED])
-m4trace:configure.ac:56: -1- AC_SUBST([GLIB2_14_DEFINES])
-m4trace:configure.ac:56: -1- AC_SUBST_TRACE([GLIB2_14_DEFINES])
-m4trace:configure.ac:56: -1- m4_pattern_allow([^GLIB2_14_DEFINES$])
-m4trace:configure.ac:58: -1- AC_SUBST([GLIB2_24_CFLAGS])
-m4trace:configure.ac:58: -1- AC_SUBST_TRACE([GLIB2_24_CFLAGS])
-m4trace:configure.ac:58: -1- m4_pattern_allow([^GLIB2_24_CFLAGS$])
-m4trace:configure.ac:58: -1- AC_SUBST([GLIB2_24_LIBS])
-m4trace:configure.ac:58: -1- AC_SUBST_TRACE([GLIB2_24_LIBS])
-m4trace:configure.ac:58: -1- m4_pattern_allow([^GLIB2_24_LIBS$])
-m4trace:configure.ac:58: -1- AC_DEFINE_TRACE_LITERAL([GLIB2_24_ENABLED])
-m4trace:configure.ac:58: -1- m4_pattern_allow([^GLIB2_24_ENABLED$])
-m4trace:configure.ac:58: -1- AH_OUTPUT([GLIB2_24_ENABLED], [/* Define to 1 if you have GLIB 2.24 or higher */
+m4trace:configure.ac:47: -1- AC_SUBST([GTK2_24_DEFINES])
+m4trace:configure.ac:47: -1- AC_SUBST_TRACE([GTK2_24_DEFINES])
+m4trace:configure.ac:47: -1- m4_pattern_allow([^GTK2_24_DEFINES$])
+m4trace:configure.ac:47: -1- AC_SUBST([GLIB2_24_CFLAGS])
+m4trace:configure.ac:47: -1- AC_SUBST_TRACE([GLIB2_24_CFLAGS])
+m4trace:configure.ac:47: -1- m4_pattern_allow([^GLIB2_24_CFLAGS$])
+m4trace:configure.ac:47: -1- AC_SUBST([GLIB2_24_LIBS])
+m4trace:configure.ac:47: -1- AC_SUBST_TRACE([GLIB2_24_LIBS])
+m4trace:configure.ac:47: -1- m4_pattern_allow([^GLIB2_24_LIBS$])
+m4trace:configure.ac:47: -1- AC_DEFINE_TRACE_LITERAL([GLIB2_24_ENABLED])
+m4trace:configure.ac:47: -1- m4_pattern_allow([^GLIB2_24_ENABLED$])
+m4trace:configure.ac:47: -1- AH_OUTPUT([GLIB2_24_ENABLED], [/* Define to 1 if you have GLIB 2.24 or higher */
 @%:@undef GLIB2_24_ENABLED])
-m4trace:configure.ac:59: -1- AC_SUBST([GLIB2_24_DEFINES])
-m4trace:configure.ac:59: -1- AC_SUBST_TRACE([GLIB2_24_DEFINES])
-m4trace:configure.ac:59: -1- m4_pattern_allow([^GLIB2_24_DEFINES$])
-m4trace:configure.ac:67: -1- AC_SUBST([GLIB2_26_CFLAGS])
-m4trace:configure.ac:67: -1- AC_SUBST_TRACE([GLIB2_26_CFLAGS])
-m4trace:configure.ac:67: -1- m4_pattern_allow([^GLIB2_26_CFLAGS$])
-m4trace:configure.ac:67: -1- AC_SUBST([GLIB2_26_LIBS])
-m4trace:configure.ac:67: -1- AC_SUBST_TRACE([GLIB2_26_LIBS])
-m4trace:configure.ac:67: -1- m4_pattern_allow([^GLIB2_26_LIBS$])
-m4trace:configure.ac:67: -1- AC_SUBST([USE_GSETTINGS])
-m4trace:configure.ac:67: -1- AC_SUBST_TRACE([USE_GSETTINGS])
-m4trace:configure.ac:67: -1- m4_pattern_allow([^USE_GSETTINGS$])
-m4trace:configure.ac:67: -1- AC_DEFINE_TRACE_LITERAL([GLIB2_26_ENABLED])
-m4trace:configure.ac:67: -1- m4_pattern_allow([^GLIB2_26_ENABLED$])
-m4trace:configure.ac:67: -1- AH_OUTPUT([GLIB2_26_ENABLED], [/* Define to 1 if you have GLIB 2.26 or higher */
+m4trace:configure.ac:47: -1- AC_SUBST([GLIB2_24_DEFINES])
+m4trace:configure.ac:47: -1- AC_SUBST_TRACE([GLIB2_24_DEFINES])
+m4trace:configure.ac:47: -1- m4_pattern_allow([^GLIB2_24_DEFINES$])
+m4trace:configure.ac:47: -1- AC_SUBST([GLIB2_26_CFLAGS])
+m4trace:configure.ac:47: -1- AC_SUBST_TRACE([GLIB2_26_CFLAGS])
+m4trace:configure.ac:47: -1- m4_pattern_allow([^GLIB2_26_CFLAGS$])
+m4trace:configure.ac:47: -1- AC_SUBST([GLIB2_26_LIBS])
+m4trace:configure.ac:47: -1- AC_SUBST_TRACE([GLIB2_26_LIBS])
+m4trace:configure.ac:47: -1- m4_pattern_allow([^GLIB2_26_LIBS$])
+m4trace:configure.ac:47: -1- AC_DEFINE_TRACE_LITERAL([GLIB2_26_ENABLED])
+m4trace:configure.ac:47: -1- m4_pattern_allow([^GLIB2_26_ENABLED$])
+m4trace:configure.ac:47: -1- AH_OUTPUT([GLIB2_26_ENABLED], [/* Define to 1 if you have GLIB 2.26 or higher */
 @%:@undef GLIB2_26_ENABLED])
-m4trace:configure.ac:76: -1- AC_SUBST([GIO_CFLAGS])
-m4trace:configure.ac:76: -1- AC_SUBST_TRACE([GIO_CFLAGS])
-m4trace:configure.ac:76: -1- m4_pattern_allow([^GIO_CFLAGS$])
-m4trace:configure.ac:76: -1- AC_SUBST([GIO_LIBS])
-m4trace:configure.ac:76: -1- AC_SUBST_TRACE([GIO_LIBS])
-m4trace:configure.ac:76: -1- m4_pattern_allow([^GIO_LIBS$])
-m4trace:configure.ac:76: -1- AC_DEFINE_TRACE_LITERAL([GIO_ENABLED])
-m4trace:configure.ac:76: -1- m4_pattern_allow([^GIO_ENABLED$])
-m4trace:configure.ac:76: -1- AH_OUTPUT([GIO_ENABLED], [/* Define to 1 if you have GIO support */
+m4trace:configure.ac:47: -1- AC_SUBST([GLIB2_26_DEFINES])
+m4trace:configure.ac:47: -1- AC_SUBST_TRACE([GLIB2_26_DEFINES])
+m4trace:configure.ac:47: -1- m4_pattern_allow([^GLIB2_26_DEFINES$])
+m4trace:configure.ac:73: -1- AC_SUBST([GTK_CFLAGS])
+m4trace:configure.ac:73: -1- AC_SUBST_TRACE([GTK_CFLAGS])
+m4trace:configure.ac:73: -1- m4_pattern_allow([^GTK_CFLAGS$])
+m4trace:configure.ac:73: -1- AC_SUBST([GTK_LIBS])
+m4trace:configure.ac:73: -1- AC_SUBST_TRACE([GTK_LIBS])
+m4trace:configure.ac:73: -1- m4_pattern_allow([^GTK_LIBS$])
+m4trace:configure.ac:73: -1- AC_SUBST([GTK_CFLAGS])
+m4trace:configure.ac:73: -1- AC_SUBST_TRACE([GTK_CFLAGS])
+m4trace:configure.ac:73: -1- m4_pattern_allow([^GTK_CFLAGS$])
+m4trace:configure.ac:73: -1- AC_SUBST([GTK_LIBS])
+m4trace:configure.ac:73: -1- AC_SUBST_TRACE([GTK_LIBS])
+m4trace:configure.ac:73: -1- m4_pattern_allow([^GTK_LIBS$])
+m4trace:configure.ac:73: -1- AC_SUBST([GLIB_CFLAGS])
+m4trace:configure.ac:73: -1- AC_SUBST_TRACE([GLIB_CFLAGS])
+m4trace:configure.ac:73: -1- m4_pattern_allow([^GLIB_CFLAGS$])
+m4trace:configure.ac:73: -1- AC_SUBST([GLIB_LIBS])
+m4trace:configure.ac:73: -1- AC_SUBST_TRACE([GLIB_LIBS])
+m4trace:configure.ac:73: -1- m4_pattern_allow([^GLIB_LIBS$])
+m4trace:configure.ac:73: -1- AC_SUBST([GLIB_CFLAGS])
+m4trace:configure.ac:73: -1- AC_SUBST_TRACE([GLIB_CFLAGS])
+m4trace:configure.ac:73: -1- m4_pattern_allow([^GLIB_CFLAGS$])
+m4trace:configure.ac:73: -1- AC_SUBST([GLIB_LIBS])
+m4trace:configure.ac:73: -1- AC_SUBST_TRACE([GLIB_LIBS])
+m4trace:configure.ac:73: -1- m4_pattern_allow([^GLIB_LIBS$])
+m4trace:configure.ac:73: -1- AC_SUBST([GTK2_12_CFLAGS])
+m4trace:configure.ac:73: -1- AC_SUBST_TRACE([GTK2_12_CFLAGS])
+m4trace:configure.ac:73: -1- m4_pattern_allow([^GTK2_12_CFLAGS$])
+m4trace:configure.ac:73: -1- AC_SUBST([GTK2_12_LIBS])
+m4trace:configure.ac:73: -1- AC_SUBST_TRACE([GTK2_12_LIBS])
+m4trace:configure.ac:73: -1- m4_pattern_allow([^GTK2_12_LIBS$])
+m4trace:configure.ac:73: -1- AC_DEFINE_TRACE_LITERAL([GTK2_12_ENABLED])
+m4trace:configure.ac:73: -1- m4_pattern_allow([^GTK2_12_ENABLED$])
+m4trace:configure.ac:73: -1- AH_OUTPUT([GTK2_12_ENABLED], [/* Define to 1 if you have GTK 2.12 or higher */
+@%:@undef GTK2_12_ENABLED])
+m4trace:configure.ac:73: -1- AC_SUBST([GTK2_12_DEFINES])
+m4trace:configure.ac:73: -1- AC_SUBST_TRACE([GTK2_12_DEFINES])
+m4trace:configure.ac:73: -1- m4_pattern_allow([^GTK2_12_DEFINES$])
+m4trace:configure.ac:73: -1- AC_SUBST([GTK2_14_CFLAGS])
+m4trace:configure.ac:73: -1- AC_SUBST_TRACE([GTK2_14_CFLAGS])
+m4trace:configure.ac:73: -1- m4_pattern_allow([^GTK2_14_CFLAGS$])
+m4trace:configure.ac:73: -1- AC_SUBST([GTK2_14_LIBS])
+m4trace:configure.ac:73: -1- AC_SUBST_TRACE([GTK2_14_LIBS])
+m4trace:configure.ac:73: -1- m4_pattern_allow([^GTK2_14_LIBS$])
+m4trace:configure.ac:73: -1- AC_DEFINE_TRACE_LITERAL([GTK2_14_ENABLED])
+m4trace:configure.ac:73: -1- m4_pattern_allow([^GTK2_14_ENABLED$])
+m4trace:configure.ac:73: -1- AH_OUTPUT([GTK2_14_ENABLED], [/* Define to 1 if you have GTK 2.14 or higher */
+@%:@undef GTK2_14_ENABLED])
+m4trace:configure.ac:73: -1- AC_SUBST([GTK2_14_DEFINES])
+m4trace:configure.ac:73: -1- AC_SUBST_TRACE([GTK2_14_DEFINES])
+m4trace:configure.ac:73: -1- m4_pattern_allow([^GTK2_14_DEFINES$])
+m4trace:configure.ac:73: -1- AC_SUBST([GTK2_18_CFLAGS])
+m4trace:configure.ac:73: -1- AC_SUBST_TRACE([GTK2_18_CFLAGS])
+m4trace:configure.ac:73: -1- m4_pattern_allow([^GTK2_18_CFLAGS$])
+m4trace:configure.ac:73: -1- AC_SUBST([GTK2_18_LIBS])
+m4trace:configure.ac:73: -1- AC_SUBST_TRACE([GTK2_18_LIBS])
+m4trace:configure.ac:73: -1- m4_pattern_allow([^GTK2_18_LIBS$])
+m4trace:configure.ac:73: -1- AC_DEFINE_TRACE_LITERAL([GTK2_18_ENABLED])
+m4trace:configure.ac:73: -1- m4_pattern_allow([^GTK2_18_ENABLED$])
+m4trace:configure.ac:73: -1- AH_OUTPUT([GTK2_18_ENABLED], [/* Define to 1 if you have GTK 2.18 or higher */
+@%:@undef GTK2_18_ENABLED])
+m4trace:configure.ac:73: -1- AC_SUBST([GTK2_18_DEFINES])
+m4trace:configure.ac:73: -1- AC_SUBST_TRACE([GTK2_18_DEFINES])
+m4trace:configure.ac:73: -1- m4_pattern_allow([^GTK2_18_DEFINES$])
+m4trace:configure.ac:73: -1- AC_SUBST([GTK2_20_CFLAGS])
+m4trace:configure.ac:73: -1- AC_SUBST_TRACE([GTK2_20_CFLAGS])
+m4trace:configure.ac:73: -1- m4_pattern_allow([^GTK2_20_CFLAGS$])
+m4trace:configure.ac:73: -1- AC_SUBST([GTK2_20_LIBS])
+m4trace:configure.ac:73: -1- AC_SUBST_TRACE([GTK2_20_LIBS])
+m4trace:configure.ac:73: -1- m4_pattern_allow([^GTK2_20_LIBS$])
+m4trace:configure.ac:73: -1- AC_DEFINE_TRACE_LITERAL([GTK2_20_ENABLED])
+m4trace:configure.ac:73: -1- m4_pattern_allow([^GTK2_20_ENABLED$])
+m4trace:configure.ac:73: -1- AH_OUTPUT([GTK2_20_ENABLED], [/* Define to 1 if you have GTK 2.20 or higher */
+@%:@undef GTK2_20_ENABLED])
+m4trace:configure.ac:73: -1- AC_SUBST([GTK2_20_DEFINES])
+m4trace:configure.ac:73: -1- AC_SUBST_TRACE([GTK2_20_DEFINES])
+m4trace:configure.ac:73: -1- m4_pattern_allow([^GTK2_20_DEFINES$])
+m4trace:configure.ac:73: -1- AC_SUBST([GTK2_22_CFLAGS])
+m4trace:configure.ac:73: -1- AC_SUBST_TRACE([GTK2_22_CFLAGS])
+m4trace:configure.ac:73: -1- m4_pattern_allow([^GTK2_22_CFLAGS$])
+m4trace:configure.ac:73: -1- AC_SUBST([GTK2_22_LIBS])
+m4trace:configure.ac:73: -1- AC_SUBST_TRACE([GTK2_22_LIBS])
+m4trace:configure.ac:73: -1- m4_pattern_allow([^GTK2_22_LIBS$])
+m4trace:configure.ac:73: -1- AC_DEFINE_TRACE_LITERAL([GTK2_22_ENABLED])
+m4trace:configure.ac:73: -1- m4_pattern_allow([^GTK2_22_ENABLED$])
+m4trace:configure.ac:73: -1- AH_OUTPUT([GTK2_22_ENABLED], [/* Define to 1 if you have GTK 2.22 or higher */
+@%:@undef GTK2_22_ENABLED])
+m4trace:configure.ac:73: -1- AC_SUBST([GTK2_22_DEFINES])
+m4trace:configure.ac:73: -1- AC_SUBST_TRACE([GTK2_22_DEFINES])
+m4trace:configure.ac:73: -1- m4_pattern_allow([^GTK2_22_DEFINES$])
+m4trace:configure.ac:73: -1- AC_SUBST([GTK2_24_CFLAGS])
+m4trace:configure.ac:73: -1- AC_SUBST_TRACE([GTK2_24_CFLAGS])
+m4trace:configure.ac:73: -1- m4_pattern_allow([^GTK2_24_CFLAGS$])
+m4trace:configure.ac:73: -1- AC_SUBST([GTK2_24_LIBS])
+m4trace:configure.ac:73: -1- AC_SUBST_TRACE([GTK2_24_LIBS])
+m4trace:configure.ac:73: -1- m4_pattern_allow([^GTK2_24_LIBS$])
+m4trace:configure.ac:73: -1- AC_DEFINE_TRACE_LITERAL([GTK2_24_ENABLED])
+m4trace:configure.ac:73: -1- m4_pattern_allow([^GTK2_24_ENABLED$])
+m4trace:configure.ac:73: -1- AH_OUTPUT([GTK2_24_ENABLED], [/* Define to 1 if you have GTK 2.24 or higher */
+@%:@undef GTK2_24_ENABLED])
+m4trace:configure.ac:73: -1- AC_SUBST([GTK2_24_DEFINES])
+m4trace:configure.ac:73: -1- AC_SUBST_TRACE([GTK2_24_DEFINES])
+m4trace:configure.ac:73: -1- m4_pattern_allow([^GTK2_24_DEFINES$])
+m4trace:configure.ac:73: -1- AC_SUBST([GLIB2_14_CFLAGS])
+m4trace:configure.ac:73: -1- AC_SUBST_TRACE([GLIB2_14_CFLAGS])
+m4trace:configure.ac:73: -1- m4_pattern_allow([^GLIB2_14_CFLAGS$])
+m4trace:configure.ac:73: -1- AC_SUBST([GLIB2_14_LIBS])
+m4trace:configure.ac:73: -1- AC_SUBST_TRACE([GLIB2_14_LIBS])
+m4trace:configure.ac:73: -1- m4_pattern_allow([^GLIB2_14_LIBS$])
+m4trace:configure.ac:73: -1- AC_DEFINE_TRACE_LITERAL([GLIB2_14_ENABLED])
+m4trace:configure.ac:73: -1- m4_pattern_allow([^GLIB2_14_ENABLED$])
+m4trace:configure.ac:73: -1- AH_OUTPUT([GLIB2_14_ENABLED], [/* Define to 1 if you have GLIB 2.14 or higher */
+@%:@undef GLIB2_14_ENABLED])
+m4trace:configure.ac:73: -1- AC_SUBST([GLIB2_14_DEFINES])
+m4trace:configure.ac:73: -1- AC_SUBST_TRACE([GLIB2_14_DEFINES])
+m4trace:configure.ac:73: -1- m4_pattern_allow([^GLIB2_14_DEFINES$])
+m4trace:configure.ac:73: -1- AC_SUBST([GLIB2_24_CFLAGS])
+m4trace:configure.ac:73: -1- AC_SUBST_TRACE([GLIB2_24_CFLAGS])
+m4trace:configure.ac:73: -1- m4_pattern_allow([^GLIB2_24_CFLAGS$])
+m4trace:configure.ac:73: -1- AC_SUBST([GLIB2_24_LIBS])
+m4trace:configure.ac:73: -1- AC_SUBST_TRACE([GLIB2_24_LIBS])
+m4trace:configure.ac:73: -1- m4_pattern_allow([^GLIB2_24_LIBS$])
+m4trace:configure.ac:73: -1- AC_DEFINE_TRACE_LITERAL([GLIB2_24_ENABLED])
+m4trace:configure.ac:73: -1- m4_pattern_allow([^GLIB2_24_ENABLED$])
+m4trace:configure.ac:73: -1- AH_OUTPUT([GLIB2_24_ENABLED], [/* Define to 1 if you have GLIB 2.24 or higher */
+@%:@undef GLIB2_24_ENABLED])
+m4trace:configure.ac:73: -1- AC_SUBST([GLIB2_24_DEFINES])
+m4trace:configure.ac:73: -1- AC_SUBST_TRACE([GLIB2_24_DEFINES])
+m4trace:configure.ac:73: -1- m4_pattern_allow([^GLIB2_24_DEFINES$])
+m4trace:configure.ac:73: -1- AC_SUBST([GLIB2_26_CFLAGS])
+m4trace:configure.ac:73: -1- AC_SUBST_TRACE([GLIB2_26_CFLAGS])
+m4trace:configure.ac:73: -1- m4_pattern_allow([^GLIB2_26_CFLAGS$])
+m4trace:configure.ac:73: -1- AC_SUBST([GLIB2_26_LIBS])
+m4trace:configure.ac:73: -1- AC_SUBST_TRACE([GLIB2_26_LIBS])
+m4trace:configure.ac:73: -1- m4_pattern_allow([^GLIB2_26_LIBS$])
+m4trace:configure.ac:73: -1- AC_DEFINE_TRACE_LITERAL([GLIB2_26_ENABLED])
+m4trace:configure.ac:73: -1- m4_pattern_allow([^GLIB2_26_ENABLED$])
+m4trace:configure.ac:73: -1- AH_OUTPUT([GLIB2_26_ENABLED], [/* Define to 1 if you have GLIB 2.26 or higher */
+@%:@undef GLIB2_26_ENABLED])
+m4trace:configure.ac:73: -1- AC_SUBST([GLIB2_26_DEFINES])
+m4trace:configure.ac:73: -1- AC_SUBST_TRACE([GLIB2_26_DEFINES])
+m4trace:configure.ac:73: -1- m4_pattern_allow([^GLIB2_26_DEFINES$])
+m4trace:configure.ac:119: -1- AC_SUBST([GLIB2_26_CFLAGS])
+m4trace:configure.ac:119: -1- AC_SUBST_TRACE([GLIB2_26_CFLAGS])
+m4trace:configure.ac:119: -1- m4_pattern_allow([^GLIB2_26_CFLAGS$])
+m4trace:configure.ac:119: -1- AC_SUBST([GLIB2_26_LIBS])
+m4trace:configure.ac:119: -1- AC_SUBST_TRACE([GLIB2_26_LIBS])
+m4trace:configure.ac:119: -1- m4_pattern_allow([^GLIB2_26_LIBS$])
+m4trace:configure.ac:119: -1- AC_SUBST([USE_GSETTINGS])
+m4trace:configure.ac:119: -1- AC_SUBST_TRACE([USE_GSETTINGS])
+m4trace:configure.ac:119: -1- m4_pattern_allow([^USE_GSETTINGS$])
+m4trace:configure.ac:119: -1- AC_DEFINE_TRACE_LITERAL([GLIB2_26_ENABLED])
+m4trace:configure.ac:119: -1- m4_pattern_allow([^GLIB2_26_ENABLED$])
+m4trace:configure.ac:119: -1- AH_OUTPUT([GLIB2_26_ENABLED], [/* Define to 1 if you have GLIB 2.26 or higher */
+@%:@undef GLIB2_26_ENABLED])
+m4trace:configure.ac:128: -1- AC_SUBST([GIO_CFLAGS])
+m4trace:configure.ac:128: -1- AC_SUBST_TRACE([GIO_CFLAGS])
+m4trace:configure.ac:128: -1- m4_pattern_allow([^GIO_CFLAGS$])
+m4trace:configure.ac:128: -1- AC_SUBST([GIO_LIBS])
+m4trace:configure.ac:128: -1- AC_SUBST_TRACE([GIO_LIBS])
+m4trace:configure.ac:128: -1- m4_pattern_allow([^GIO_LIBS$])
+m4trace:configure.ac:128: -1- AC_DEFINE_TRACE_LITERAL([GIO_ENABLED])
+m4trace:configure.ac:128: -1- m4_pattern_allow([^GIO_ENABLED$])
+m4trace:configure.ac:128: -1- AH_OUTPUT([GIO_ENABLED], [/* Define to 1 if you have GIO support */
 @%:@undef GIO_ENABLED])
-m4trace:configure.ac:76: -1- AC_SUBST([GIO_DEFINES])
-m4trace:configure.ac:76: -1- AC_SUBST_TRACE([GIO_DEFINES])
-m4trace:configure.ac:76: -1- m4_pattern_allow([^GIO_DEFINES$])
-m4trace:configure.ac:76: -1- AC_SUBST([GIO_CFLAGS])
-m4trace:configure.ac:76: -1- AC_SUBST_TRACE([GIO_CFLAGS])
-m4trace:configure.ac:76: -1- m4_pattern_allow([^GIO_CFLAGS$])
-m4trace:configure.ac:76: -1- AC_SUBST([GIO_LIBS])
-m4trace:configure.ac:76: -1- AC_SUBST_TRACE([GIO_LIBS])
-m4trace:configure.ac:76: -1- m4_pattern_allow([^GIO_LIBS$])
-m4trace:configure.ac:88: -1- AC_SUBST([ALSA_CFLAGS])
-m4trace:configure.ac:88: -1- AC_SUBST_TRACE([ALSA_CFLAGS])
-m4trace:configure.ac:88: -1- m4_pattern_allow([^ALSA_CFLAGS$])
-m4trace:configure.ac:88: -1- AC_SUBST([ALSA_LIBS])
-m4trace:configure.ac:88: -1- AC_SUBST_TRACE([ALSA_LIBS])
-m4trace:configure.ac:88: -1- m4_pattern_allow([^ALSA_LIBS$])
-m4trace:configure.ac:88: -1- AC_DEFINE_TRACE_LITERAL([HAVE_ASOUNDLIB])
-m4trace:configure.ac:88: -1- m4_pattern_allow([^HAVE_ASOUNDLIB$])
-m4trace:configure.ac:88: -1- AH_OUTPUT([HAVE_ASOUNDLIB], [/* Define to 1 if you have asoundlib development packages */
+m4trace:configure.ac:128: -1- AC_SUBST([GIO_DEFINES])
+m4trace:configure.ac:128: -1- AC_SUBST_TRACE([GIO_DEFINES])
+m4trace:configure.ac:128: -1- m4_pattern_allow([^GIO_DEFINES$])
+m4trace:configure.ac:128: -1- AC_SUBST([GIO_CFLAGS])
+m4trace:configure.ac:128: -1- AC_SUBST_TRACE([GIO_CFLAGS])
+m4trace:configure.ac:128: -1- m4_pattern_allow([^GIO_CFLAGS$])
+m4trace:configure.ac:128: -1- AC_SUBST([GIO_LIBS])
+m4trace:configure.ac:128: -1- AC_SUBST_TRACE([GIO_LIBS])
+m4trace:configure.ac:128: -1- m4_pattern_allow([^GIO_LIBS$])
+m4trace:configure.ac:140: -1- AC_SUBST([ALSA_CFLAGS])
+m4trace:configure.ac:140: -1- AC_SUBST_TRACE([ALSA_CFLAGS])
+m4trace:configure.ac:140: -1- m4_pattern_allow([^ALSA_CFLAGS$])
+m4trace:configure.ac:140: -1- AC_SUBST([ALSA_LIBS])
+m4trace:configure.ac:140: -1- AC_SUBST_TRACE([ALSA_LIBS])
+m4trace:configure.ac:140: -1- m4_pattern_allow([^ALSA_LIBS$])
+m4trace:configure.ac:140: -1- AC_DEFINE_TRACE_LITERAL([HAVE_ASOUNDLIB])
+m4trace:configure.ac:140: -1- m4_pattern_allow([^HAVE_ASOUNDLIB$])
+m4trace:configure.ac:140: -1- AH_OUTPUT([HAVE_ASOUNDLIB], [/* Define to 1 if you have asoundlib development packages */
 @%:@undef HAVE_ASOUNDLIB])
-m4trace:configure.ac:88: -1- AC_SUBST([ALSA_DEFINES])
-m4trace:configure.ac:88: -1- AC_SUBST_TRACE([ALSA_DEFINES])
-m4trace:configure.ac:88: -1- m4_pattern_allow([^ALSA_DEFINES$])
-m4trace:configure.ac:88: -1- AC_SUBST([ALSA_CFLAGS])
-m4trace:configure.ac:88: -1- AC_SUBST_TRACE([ALSA_CFLAGS])
-m4trace:configure.ac:88: -1- m4_pattern_allow([^ALSA_CFLAGS$])
-m4trace:configure.ac:88: -1- AC_SUBST([ALSA_LIBS])
-m4trace:configure.ac:88: -1- AC_SUBST_TRACE([ALSA_LIBS])
-m4trace:configure.ac:88: -1- m4_pattern_allow([^ALSA_LIBS$])
-m4trace:configure.ac:100: -1- AC_SUBST([PULSE_CFLAGS])
-m4trace:configure.ac:100: -1- AC_SUBST_TRACE([PULSE_CFLAGS])
-m4trace:configure.ac:100: -1- m4_pattern_allow([^PULSE_CFLAGS$])
-m4trace:configure.ac:100: -1- AC_SUBST([PULSE_LIBS])
-m4trace:configure.ac:100: -1- AC_SUBST_TRACE([PULSE_LIBS])
-m4trace:configure.ac:100: -1- m4_pattern_allow([^PULSE_LIBS$])
-m4trace:configure.ac:100: -1- AC_DEFINE_TRACE_LITERAL([HAVE_PULSEAUDIO])
-m4trace:configure.ac:100: -1- m4_pattern_allow([^HAVE_PULSEAUDIO$])
-m4trace:configure.ac:100: -1- AH_OUTPUT([HAVE_PULSEAUDIO], [/* Define to 1 if you have PulseAudio development packages */
+m4trace:configure.ac:140: -1- AC_SUBST([ALSA_DEFINES])
+m4trace:configure.ac:140: -1- AC_SUBST_TRACE([ALSA_DEFINES])
+m4trace:configure.ac:140: -1- m4_pattern_allow([^ALSA_DEFINES$])
+m4trace:configure.ac:140: -1- AC_SUBST([ALSA_CFLAGS])
+m4trace:configure.ac:140: -1- AC_SUBST_TRACE([ALSA_CFLAGS])
+m4trace:configure.ac:140: -1- m4_pattern_allow([^ALSA_CFLAGS$])
+m4trace:configure.ac:140: -1- AC_SUBST([ALSA_LIBS])
+m4trace:configure.ac:140: -1- AC_SUBST_TRACE([ALSA_LIBS])
+m4trace:configure.ac:140: -1- m4_pattern_allow([^ALSA_LIBS$])
+m4trace:configure.ac:152: -1- AC_SUBST([PULSE_CFLAGS])
+m4trace:configure.ac:152: -1- AC_SUBST_TRACE([PULSE_CFLAGS])
+m4trace:configure.ac:152: -1- m4_pattern_allow([^PULSE_CFLAGS$])
+m4trace:configure.ac:152: -1- AC_SUBST([PULSE_LIBS])
+m4trace:configure.ac:152: -1- AC_SUBST_TRACE([PULSE_LIBS])
+m4trace:configure.ac:152: -1- m4_pattern_allow([^PULSE_LIBS$])
+m4trace:configure.ac:152: -1- AC_DEFINE_TRACE_LITERAL([HAVE_PULSEAUDIO])
+m4trace:configure.ac:152: -1- m4_pattern_allow([^HAVE_PULSEAUDIO$])
+m4trace:configure.ac:152: -1- AH_OUTPUT([HAVE_PULSEAUDIO], [/* Define to 1 if you have PulseAudio development packages */
 @%:@undef HAVE_PULSEAUDIO])
-m4trace:configure.ac:100: -1- AC_SUBST([PULSE_DEFINES])
-m4trace:configure.ac:100: -1- AC_SUBST_TRACE([PULSE_DEFINES])
-m4trace:configure.ac:100: -1- m4_pattern_allow([^PULSE_DEFINES$])
-m4trace:configure.ac:100: -1- AC_SUBST([PULSE_CFLAGS])
-m4trace:configure.ac:100: -1- AC_SUBST_TRACE([PULSE_CFLAGS])
-m4trace:configure.ac:100: -1- m4_pattern_allow([^PULSE_CFLAGS$])
-m4trace:configure.ac:100: -1- AC_SUBST([PULSE_LIBS])
-m4trace:configure.ac:100: -1- AC_SUBST_TRACE([PULSE_LIBS])
-m4trace:configure.ac:100: -1- m4_pattern_allow([^PULSE_LIBS$])
-m4trace:configure.ac:109: -1- AC_SUBST([GLIB2_26_DEFINES])
-m4trace:configure.ac:109: -1- AC_SUBST_TRACE([GLIB2_26_DEFINES])
-m4trace:configure.ac:109: -1- m4_pattern_allow([^GLIB2_26_DEFINES$])
-m4trace:configure.ac:112: -1- AM_CONDITIONAL([BUILD_GTK3], [true])
-m4trace:configure.ac:112: -1- AC_SUBST([BUILD_GTK3_TRUE])
-m4trace:configure.ac:112: -1- AC_SUBST_TRACE([BUILD_GTK3_TRUE])
-m4trace:configure.ac:112: -1- m4_pattern_allow([^BUILD_GTK3_TRUE$])
-m4trace:configure.ac:112: -1- AC_SUBST([BUILD_GTK3_FALSE])
-m4trace:configure.ac:112: -1- AC_SUBST_TRACE([BUILD_GTK3_FALSE])
-m4trace:configure.ac:112: -1- m4_pattern_allow([^BUILD_GTK3_FALSE$])
-m4trace:configure.ac:112: -1- _AM_SUBST_NOTMAKE([BUILD_GTK3_TRUE])
-m4trace:configure.ac:112: -1- _AM_SUBST_NOTMAKE([BUILD_GTK3_FALSE])
-m4trace:configure.ac:116: -1- AC_CONFIG_FILES([
+m4trace:configure.ac:152: -1- AC_SUBST([PULSE_DEFINES])
+m4trace:configure.ac:152: -1- AC_SUBST_TRACE([PULSE_DEFINES])
+m4trace:configure.ac:152: -1- m4_pattern_allow([^PULSE_DEFINES$])
+m4trace:configure.ac:152: -1- AC_SUBST([PULSE_CFLAGS])
+m4trace:configure.ac:152: -1- AC_SUBST_TRACE([PULSE_CFLAGS])
+m4trace:configure.ac:152: -1- m4_pattern_allow([^PULSE_CFLAGS$])
+m4trace:configure.ac:152: -1- AC_SUBST([PULSE_LIBS])
+m4trace:configure.ac:152: -1- AC_SUBST_TRACE([PULSE_LIBS])
+m4trace:configure.ac:152: -1- m4_pattern_allow([^PULSE_LIBS$])
+m4trace:configure.ac:160: -1- AC_SUBST([GLIB2_26_DEFINES])
+m4trace:configure.ac:160: -1- AC_SUBST_TRACE([GLIB2_26_DEFINES])
+m4trace:configure.ac:160: -1- m4_pattern_allow([^GLIB2_26_DEFINES$])
+m4trace:configure.ac:162: -1- AC_CONFIG_FILES([
 Makefile
 src/gmtk.pc
 src/gmlib.pc
 src/Makefile
 po/Makefile.in])
-m4trace:configure.ac:116: -1- _m4_warn([obsolete], [AC_OUTPUT should be used without arguments.
+m4trace:configure.ac:162: -1- _m4_warn([obsolete], [AC_OUTPUT should be used without arguments.
 You should run autoupdate.], [])
-m4trace:configure.ac:116: -1- AC_SUBST([LIB@&t@OBJS], [$ac_libobjs])
-m4trace:configure.ac:116: -1- AC_SUBST_TRACE([LIB@&t@OBJS])
-m4trace:configure.ac:116: -1- m4_pattern_allow([^LIB@&t@OBJS$])
-m4trace:configure.ac:116: -1- AC_SUBST([LTLIBOBJS], [$ac_ltlibobjs])
-m4trace:configure.ac:116: -1- AC_SUBST_TRACE([LTLIBOBJS])
-m4trace:configure.ac:116: -1- m4_pattern_allow([^LTLIBOBJS$])
-m4trace:configure.ac:116: -1- AM_CONDITIONAL([am__EXEEXT], [test -n "$EXEEXT"])
-m4trace:configure.ac:116: -1- AC_SUBST([am__EXEEXT_TRUE])
-m4trace:configure.ac:116: -1- AC_SUBST_TRACE([am__EXEEXT_TRUE])
-m4trace:configure.ac:116: -1- m4_pattern_allow([^am__EXEEXT_TRUE$])
-m4trace:configure.ac:116: -1- AC_SUBST([am__EXEEXT_FALSE])
-m4trace:configure.ac:116: -1- AC_SUBST_TRACE([am__EXEEXT_FALSE])
-m4trace:configure.ac:116: -1- m4_pattern_allow([^am__EXEEXT_FALSE$])
-m4trace:configure.ac:116: -1- _AM_SUBST_NOTMAKE([am__EXEEXT_TRUE])
-m4trace:configure.ac:116: -1- _AM_SUBST_NOTMAKE([am__EXEEXT_FALSE])
-m4trace:configure.ac:116: -1- AC_SUBST_TRACE([top_builddir])
-m4trace:configure.ac:116: -1- AC_SUBST_TRACE([top_build_prefix])
-m4trace:configure.ac:116: -1- AC_SUBST_TRACE([srcdir])
-m4trace:configure.ac:116: -1- AC_SUBST_TRACE([abs_srcdir])
-m4trace:configure.ac:116: -1- AC_SUBST_TRACE([top_srcdir])
-m4trace:configure.ac:116: -1- AC_SUBST_TRACE([abs_top_srcdir])
-m4trace:configure.ac:116: -1- AC_SUBST_TRACE([builddir])
-m4trace:configure.ac:116: -1- AC_SUBST_TRACE([abs_builddir])
-m4trace:configure.ac:116: -1- AC_SUBST_TRACE([abs_top_builddir])
-m4trace:configure.ac:116: -1- AC_SUBST_TRACE([INSTALL])
-m4trace:configure.ac:116: -1- AC_SUBST_TRACE([MKDIR_P])
-m4trace:configure.ac:116: -1- AC_REQUIRE_AUX_FILE([ltmain.sh])
+m4trace:configure.ac:162: -1- AC_SUBST([LIB@&t@OBJS], [$ac_libobjs])
+m4trace:configure.ac:162: -1- AC_SUBST_TRACE([LIB@&t@OBJS])
+m4trace:configure.ac:162: -1- m4_pattern_allow([^LIB@&t@OBJS$])
+m4trace:configure.ac:162: -1- AC_SUBST([LTLIBOBJS], [$ac_ltlibobjs])
+m4trace:configure.ac:162: -1- AC_SUBST_TRACE([LTLIBOBJS])
+m4trace:configure.ac:162: -1- m4_pattern_allow([^LTLIBOBJS$])
+m4trace:configure.ac:162: -1- AM_CONDITIONAL([am__EXEEXT], [test -n "$EXEEXT"])
+m4trace:configure.ac:162: -1- AC_SUBST([am__EXEEXT_TRUE])
+m4trace:configure.ac:162: -1- AC_SUBST_TRACE([am__EXEEXT_TRUE])
+m4trace:configure.ac:162: -1- m4_pattern_allow([^am__EXEEXT_TRUE$])
+m4trace:configure.ac:162: -1- AC_SUBST([am__EXEEXT_FALSE])
+m4trace:configure.ac:162: -1- AC_SUBST_TRACE([am__EXEEXT_FALSE])
+m4trace:configure.ac:162: -1- m4_pattern_allow([^am__EXEEXT_FALSE$])
+m4trace:configure.ac:162: -1- _AM_SUBST_NOTMAKE([am__EXEEXT_TRUE])
+m4trace:configure.ac:162: -1- _AM_SUBST_NOTMAKE([am__EXEEXT_FALSE])
+m4trace:configure.ac:162: -1- AC_SUBST_TRACE([top_builddir])
+m4trace:configure.ac:162: -1- AC_SUBST_TRACE([top_build_prefix])
+m4trace:configure.ac:162: -1- AC_SUBST_TRACE([srcdir])
+m4trace:configure.ac:162: -1- AC_SUBST_TRACE([abs_srcdir])
+m4trace:configure.ac:162: -1- AC_SUBST_TRACE([top_srcdir])
+m4trace:configure.ac:162: -1- AC_SUBST_TRACE([abs_top_srcdir])
+m4trace:configure.ac:162: -1- AC_SUBST_TRACE([builddir])
+m4trace:configure.ac:162: -1- AC_SUBST_TRACE([abs_builddir])
+m4trace:configure.ac:162: -1- AC_SUBST_TRACE([abs_top_builddir])
+m4trace:configure.ac:162: -1- AC_SUBST_TRACE([INSTALL])
+m4trace:configure.ac:162: -1- AC_SUBST_TRACE([MKDIR_P])
+m4trace:configure.ac:162: -1- AC_REQUIRE_AUX_FILE([ltmain.sh])
